tests/invalid/bytearray_clear_wrong_args/main.py
ba: bytearray = bytearray(b"hi")
ba.clear(1)
